Perf batch 2
* All calls now pass through instances call
* New functions introduced that fetch data for multiple apps in one shot in instanceinfodb
* Applications payload size reduced
* /spec call added